Task5/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}  # Применяется ко всем подам
  policyTypes:
    - Ingress
    - Egress
