Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: back-end-api  # Применяется к back-end-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front-end-app  # Разрешает входящий трафик от front-end
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: front-end-app  # Разрешает исходящий трафик к front-end

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-api
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api  # Применяется к admin-back-end-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: admin-front-end-app  # Разрешает входящий трафик от admin-front-end
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: admin-front-end-app  # Разрешает исходящий трафик к admin-front-end
